More formatting changes and notes from dwinslow's deploy-doc-update branch.